assets/css/styles.css
/* Fonts and Base Styles */
body {
  font-family: "Halant", serif;
  background-color: var(--background);
  color: var(--text);
  margin: 0;
  padding: 0;
}

/* Color Palette */
:root {
  --blue-primary: #02acce;
  --yellow: #fdcb3b;
  --cream: #fde7a9;
  --blue-accent: #28adce;
  --orange: #fa8b46;

  --background: #fde7a9;
  --text: #1a1a1a;
}

/* Navbar */
.navbar {
  background-color: var(--blue-primary) !important;
  padding: 0.5rem 1rem;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.navbar-brand {
  font-family: "Hachi Maru Pop", cursive;
  color: white;
  font-size: clamp(1rem, 2vw, 1.5rem);
  display: flex;
  align-items: center;
}

.navbar-brand:hover {
  color: var(--yellow);
}

.nav-link {
  color: white !important;
  font-weight: 500;
  padding: 0.5rem 0.75rem;
}

.nav-link:hover {
  color: var(--yellow) !important;
}

.logo-img {
  height: 30px;
  width: auto;
  margin-right: 0.5rem;
}

/*hero section*/
.hero {
  background: url("/assets/images/children-and-cake.png") center/cover no-repeat;
  background-attachment: fixed;
  color: --orange;
  min-height: 100vh;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 5rem;
}

.hero h1,
.hero p {
  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
  margin-top: 5rem;
  color: var(--blue-primary);
}
.hero .container {
  padding-top: 390px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 70vh;
  width: fit-content;
}

h1,
h2,
h3 {
  font-family: "Hachi Maru Pop", cursive;
  color: var(--blue-accent);
}

/*Overlay*/
.hero {
  position: relative;
  background: url("assets/images/children-having-fun-birthday-party.jpg")
    center/cover no-repeat;
  min-height: 80vh;
}

.mb-3,
.mb4 {
  position: absolute;
  top: 50%;
  left: 0;
  width: fit-content;
  height: 215px; 
  background-color: rgba(0, 0, 0, 0.5); 
  z-index:2
}

.hero .container {
  position: relative;
  z-index: 2; /* Ensure content is on top of the overlay */
}

/* Buttons */
.btn-primary {
  background-color: var(--orange);
  border: 1px;
}

.btn-primary:hover {
  background-color: var(--yellow);
  color: var(--orange);
}

/*main section*/


/* Responsive Design */
@media (min-width: 768px) {
  .navbar-brand {
    font-size: clamp(0.5rem, 2vw);
  }

  .nav-link {
    padding: 0.5rem 1rem;
  }

  .logo-img {
    height: 40px;
  }
}

@media (max-width: 767.98px) {
  .navbar-brand {
    font-size: 1rem;
    width: 40%;
  }

  .nav-link {
    font-size: 0.95rem;
  }
  #button {
    padding: 0%;
  }

  .logo-img {
    height: 36px;
  }
}
@media (max-width: 480px) {
  .navbar-brand {
    margin: 0 auto;
    white-space: normal;
    text-align: center;
    font-size: 0.8rem;
  }

  .nav-link {
    font-size: 0.8rem;
  }

  .logo-img {
    height: 30px;
  }
}

